[gd_scene load_steps=4 format=3 uid="uid://cf8smuhhr6um2"]

[ext_resource type="Script" uid="uid://cu3rjoyn0sms2" path="res://Scripts/totem_atirador.gd" id="1_xgqeg"]
[ext_resource type="Texture2D" uid="uid://dmpd1ucmxgv8e" path="res://Images/Totem.png" id="2_3xls5"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_r3f1f"]
size = Vector2(109, 44)

[node name="totem_atirador" type="StaticBody2D"]
script = ExtResource("1_xgqeg")
para_direita = false

[node name="sprite" type="Sprite2D" parent="."]
modulate = Color(1, 1, 0, 1)
rotation = 3.14159
texture = ExtResource("2_3xls5")
flip_v = true
region_enabled = true
region_rect = Rect2(33, 14, 109, 239)

[node name="colisao" type="CollisionShape2D" parent="."]
position = Vector2(0, 98)
shape = SubResource("RectangleShape2D_r3f1f")
debug_color = Color(0.576587, 0.385327, 1, 0.42)

[node name="spawn_do_tiro" type="Marker2D" parent="."]
position = Vector2(38, 38)

[node name="cd_tiro" type="Timer" parent="."]
wait_time = 5.0

[node name="VisibleOnScreenEnabler2D" type="VisibleOnScreenEnabler2D" parent="."]
scale = Vector2(5.45, 12.1)

[connection signal="timeout" from="cd_tiro" to="." method="_on_cd_tiro_timeout"]
[connection signal="screen_entered" from="VisibleOnScreenEnabler2D" to="." method="_on_visible_on_screen_enabler_2d_screen_entered"]
[connection signal="screen_exited" from="VisibleOnScreenEnabler2D" to="." method="_on_visible_on_screen_enabler_2d_screen_exited"]
